syntax = "proto3";

package httptest;

import "google/api/annotations.proto";

service HTTPPermutations {
  rpc GetWithQuery (GetWithQueryRequest) returns (GetWithQueryResponse) {
    option (google.api.http) = {
      get: "/getwithquery"
    };
  }
}

message GetWithQueryRequest {
  int64 A = 1;
  int64 B = 2;
}

message GetWithQueryResponse {
  int64 V = 1;
}

message GetWithRepeatedQueryRequest {
  repeated int64 A = 1;
}

message GetWithRepeatedQueryResponse {
  int64 V = 1;
}

  /*rpc GetWithRepeatedQuery (GetWithRepeatedQueryRequest) returns (GetWithRepeatedQueryResponse) {*/
    /*option (google.api.http) = {*/
      /*get: "/sum"*/
    /*};*/
  /*}*/
  /*rpc GetWithQueryAndPath (GetWithQueryAndPathRequest) returns (GetWithQueryAndPathResponse) {*/
    /*option (google.api.http) = {*/
      /*get: "/sum"*/
    /*};*/
  /*}*/
  /*rpc PostWithBody (PostWithBodyRequest) returns (PostWithBodyResponse) {*/
    /*option (google.api.http) = {*/
      /*get: "/sum"*/
    /*};*/
  /*}*/
  /*rpc PostWithBodyAndPath (PostWithBodyAndPathRequest) returns (PostWithBodyAndPathResponse) {*/
    /*option (google.api.http) = {*/
      /*get: "/sum"*/
    /*};*/
  /*}*/
